# jungle

./: Cargo.toml  README.md  config.json  launcher.sh  test_config.json
.github/workflows/: check.yml  deploy.yml  rust.yml
ggez_demo/: Cargo.toml
ggez_demo/src/: lib.rs  main.rs  water_drop.rs
src/: handle_input.rs  images.rs  initialize.rs  lib.rs  main.rs  map.rs
src/config/: map.rs  mod.rs  serde_button.rs  serde_color.rs
src/draw_systems/: background_draw_system.rs  ground_draw_system.rs  hearts_draw_system.rs  ladder_draw_system.rs  mod.rs  player_draw_system.rs  single_pit_draw_system.rs  tree_draw_system.rs
src/game_objects/: bedrock.rs  foliage.rs  game_object.rs  game_object_types.rs  ground.rs  mod.rs  pit.rs  player.rs  surface copy.rs  surface.rs  surface_background.rs  tree_trunks.rs
src/game_objects/builders/: background.rs  hearts.rs  ladder.rs  mod.rs  pit1.rs  player.rs
src/life_systems/: mod.rs  player_life_system.rs
src/physics_systems/: mod.rs  player_physics_system.rs  player_physics_system_old.rs
src/scenes/: end_scene.rs  main_scene.rs  mod.rs  pause_scene.rs  start_scene.rs
www/: bootstrap.js  config.json  index.html  main.js  package-lock.json  package.json  webpack.config.js
